# frama-c-lsp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  README.md  SECURITY.md  opam
client/: .gitignore  .vscodeignore  README.md  acsl-lsp-0.3.0.vsix  acsl-lsp-linux-x64-0.1.0.vsix  build.xml  downloadartifacts.sh  ivy-publish.xml  ivy.xml  ivybuild_template.xml  ivysettings.xml  package.json  run.sh  uploadartifacts.sh
client/src/: extension.ts  projectImporter.ts
client/src/test/: runTest.ts
client/src/test/suite/: extension.test.ts  index.ts
client/syntax/: acsl.tmLanguage.json  language-configuration.json
example/: memory_blocks.c  test.c
example/lib/: ctype.h  test.h
server/: README.md  dune  dune-project
server/src/: lsp.ml
server/src/features/: completion.ml  context_finder.ml  declaration.ml  definition.ml  didSave.ml  extract_ast.ml  initialize.ml  provePO.ml  showPOVC.ml
server/src/handler/: configuration.ml  lsp_handler.ml  start_server.ml
server/src/lib/: lsp_types.ml  utils.ml
server/src/options/: cmdline.ml  options.ml
