(rule
	(alias frama-c-configure)
	(deps (universe))
	(action (progn
			(echo "lsp:" %{lib-available:frama-c-lsp.core} "\n")
			(echo " - Frama-C:" %{lib-available:frama-c.kernel} "\n")
		)
	)
)

(include_subdirs unqualified)

(library
	(name lsp)
	(public_name frama-c-lsp.core)
	(flags -open Frama_c_kernel :standard)
	(libraries 
		frama-c.kernel
		frama-c-wp.core
		frama-c-metrics.core
		frama-c-callgraph.core
	)
)


(plugin
	(name lsp)
	(libraries frama-c-lsp.core)
	(site (frama-c plugins))
)



